# poker

./: Cargo.toml  LICENSE.txt  README.md  rules.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml
src/: hand.rs  info.rs  main.rs  questions.rs  terminal.rs
src/ai/: mod.rs  name.rs
src/cards/: card.rs  deck.rs  hand.rs  mod.rs  rank.rs  suit.rs
