[package]
name = "poker_rs"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Rose <joshuarose@gmx.com>"]
description = "A poker game written in Rust."
repository = "https://github.com/Trivoz/poker"
readme = "README.md"
license-file = "LICENSE.txt"
documentation = "https://docs.rs/poker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
